--- a/html/menu.html
+++ b/html/menu.html
@@ -3,13 +3,18 @@
 <head>
   <style>
     body {
-      display: flex;
       margin: 0;
-      flex-direction: column;
+    }
+    * {
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
-  <h1>Menu</h1>
+  <div style="display: flex; flex-direction: column; align-items: flex-start;">
+    <h1>Menu</h1>
+    <a href="https://google.com/">Link me!</a>
+    <button click="console.log('lol');">Submit</button>
+  </div>
 </body>
 </html>
