Normalize drawWindow url

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
 
     let menuImg = null;
     let menuMetrics = null;
-    /* window.drawWindow && window.drawWindow(`${window.location.origin}/html/menu.html`, urlBarWidth, 512)
+    /* window.drawWindow && window.drawWindow('html/menu.html', menuWidth, 512)
       .then(({img, metrics}) => {
         menuImg = img;
         menuMetrics = metrics;
