--- a/html/menu.html
+++ b/html/menu.html
@@ -5,7 +5,7 @@
     body {
       margin: 0;
       font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
-      font-size: 100px;
+      font-size: 3vw;
     }
     * {
       box-sizing: border-box;
