--- a/index.html
+++ b/index.html
@@ -1377,25 +1377,264 @@
 
     let screenFramebuffer = null;
     (() => {
-      const geometry = new THREE.PlaneBufferGeometry(2, 2, 1);
-      const texture = new THREE.Texture(
-        null,
-        THREE.UVMapping,
-        THREE.RepeatWrapping,
-        THREE.RepeatWrapping,
-        THREE.NearestFilter,
-        THREE.NearestFilter,
-        THREE.RGBAFormat,
-        THREE.UnsignedByteType,
-        1
-      );
-      const material = new THREE.MeshBasicMaterial({
-        map: texture,
-      });
-      const screenMesh = new THREE.Mesh(geometry, material);
+      function sum(a) {
+        let result = 0;
+        for (let i = 0; i < a.length; i++) {
+          result += a[i];
+        }
+        return result;
+      }
+      function unindexBufferGeometry(geometry) {
+        if (geometry.index) {
+          const indexes = geometry.index.array;
+          const numIndexes = indexes.length;
+          const positionAttribute = geometry.getAttribute('position');
+          const oldPositions = positionAttribute ? positionAttribute.array : null;
+          const positions = positionAttribute ? new Float32Array(numIndexes * 3) : null;
+          const normalAttribute = geometry.getAttribute('normal');
+          const oldNormals = normalAttribute ? normalAttribute.array : null;
+          const normals = normalAttribute ? new Float32Array(numIndexes * 3) : null;
+          const colorAttribute = geometry.getAttribute('color');
+          const oldColors = colorAttribute ? colorAttribute.array : null;
+          const colors = colorAttribute ? new Float32Array(numIndexes * 3) : null;
+          const uvAttribute = geometry.getAttribute('uv');
+          const oldUvs = uvAttribute ? uvAttribute.array : null;
+          const uvs = uvAttribute ? new Float32Array(numIndexes * 2) : null;
+          for (let i = 0; i < numIndexes; i++) {
+            const index = indexes[i];
+
+            if (positions !== null) {
+              positions[(i * 3) + 0] = oldPositions[(index * 3) + 0];
+              positions[(i * 3) + 1] = oldPositions[(index * 3) + 1];
+              positions[(i * 3) + 2] = oldPositions[(index * 3) + 2];
+            }
+            if (normals !== null) {
+              normals[(i * 3) + 0] = oldNormals[(index * 3) + 0];
+              normals[(i * 3) + 1] = oldNormals[(index * 3) + 1];
+              normals[(i * 3) + 2] = oldNormals[(index * 3) + 2];
+            }
+            if (colors !== null) {
+              colors[(i * 3) + 0] = oldColors[(index * 3) + 0];
+              colors[(i * 3) + 1] = oldColors[(index * 3) + 1];
+              colors[(i * 3) + 2] = oldColors[(index * 3) + 2];
+            }
+            if (uvs !== null) {
+              uvs[(i * 2) + 0] = oldUvs[(index * 2) + 0];
+              uvs[(i * 2) + 1] = oldUvs[(index * 2) + 1];
+            }
+          }
+          if (positions !== null) {
+            geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
+          }
+          if (normals !== null) {
+            geometry.addAttribute('normal', new THREE.BufferAttribute(normals, 3));
+          }
+          if (colors !== null) {
+            geometry.addAttribute('color', new THREE.BufferAttribute(colors, 3));
+          }
+          if (uvs !== null) {
+            geometry.addAttribute('uv', new THREE.BufferAttribute(uvs, 2));
+          }
+          geometry.index = null;
+        }
+
+        return geometry;
+      }
+      function concatBufferGeometry(geometries) {
+        geometries = geometries.map(geometry => unindexBufferGeometry(geometry));
+
+        const positions = (() => {
+          const geometryPositions = geometries.map(geometry => geometry.getAttribute('position').array);
+          const numPositions = sum(geometryPositions.map(geometryPosition => geometryPosition.length));
+
+          const result = new Float32Array(numPositions);
+          let i = 0;
+          geometryPositions.forEach(geometryPosition => {
+            result.set(geometryPosition, i);
+            i += geometryPosition.length;
+          });
+          return result;
+        })();
+        const normals = (() => {
+          const geometryNormals = geometries.map(geometry => geometry.getAttribute('normal').array);
+          const numNormals = sum(geometryNormals.map(geometryNormal => geometryNormal.length));
+
+          const result = new Float32Array(numNormals);
+          let i = 0;
+          geometryNormals.forEach(geometryNormal => {
+            result.set(geometryNormal, i);
+            i += geometryNormal.length;
+          });
+          return result;
+        })();
+        const uvs = (() => {
+          const geometryUvs = geometries.map(geometry => geometry.getAttribute('uv').array);
+          const numUvs = sum(geometryUvs.map(geometryUv => geometryUv.length));
+
+          const result = new Float32Array(numUvs);
+          let i = 0;
+          geometryUvs.forEach(geometryUv => {
+            result.set(geometryUv, i);
+            i += geometryUv.length;
+          });
+          return result;
+        })();
+
+        const geometry = new THREE.BufferGeometry();
+        geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
+        geometry.addAttribute('normal', new THREE.BufferAttribute(normals, 3));
+        geometry.addAttribute('uv', new THREE.BufferAttribute(uvs, 2));
+        return geometry;
+      }
+
+      const screenMesh = (() => {
+        const geometry = new THREE.PlaneBufferGeometry(2, 2, 1);
+        const texture = new THREE.Texture(
+          null,
+          THREE.UVMapping,
+          THREE.RepeatWrapping,
+          THREE.RepeatWrapping,
+          THREE.NearestFilter,
+          THREE.NearestFilter,
+          THREE.RGBAFormat,
+          THREE.UnsignedByteType,
+          1
+        );
+        const material = new THREE.MeshBasicMaterial({
+          map: texture,
+          side: THREE.DoubleSide,
+        });
+        const screenMesh = new THREE.Mesh(geometry, material);
+        return screenMesh;
+      })();
       screenMesh.position.set(1, 1, 0);
       screenMesh.rotation.set(0, -Math.PI/2, 0, 'YXZ');
       scene.add(screenMesh);
+
+      const consoleMaterial = new THREE.MeshPhongMaterial({
+        color: 0x333333,
+        // shading: THREE.FlatShading,
+      });
+      const cartridgeMaterial = new THREE.MeshPhongMaterial({
+        color: 0x808080,
+        // shading: THREE.FlatShading,
+      });
+
+      const gamepadMeshes = (() => {
+        const leftGamepadMesh = (() => {
+          const object = new THREE.Object3D();
+          object.position.set(-0.1, 1.5, 0.7);
+
+          const coreMesh = (() => {
+            const geometry = new THREE.BoxBufferGeometry(0.05, 0.02, 0.1);
+            const material = consoleMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(coreMesh);
+
+          const buttonsMesh = (() => {
+            const geometry = concatBufferGeometry([
+              new THREE.BoxBufferGeometry(0.005, 0.005, 0.0075)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(0, 0.02 / 2, -0.0075)),
+              new THREE.BoxBufferGeometry(0.0075, 0.005, 0.005)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(-0.0075, 0.02 / 2, 0)),
+              new THREE.BoxBufferGeometry(0.005, 0.005, 0.0075)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(0, 0.02 / 2, 0.0075)),
+              new THREE.BoxBufferGeometry(0.0075, 0.005, 0.005)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(0.0075, 0.02 / 2, 0)),
+              new THREE.BoxBufferGeometry(0.04, 0.02 / 2, 0.02)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(-(0.05 / 2) + (0.04 / 2) - 0.005, 0, -(0.1 / 2) + (0.02 / 4))),
+            ]);
+            const material = cartridgeMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(buttonsMesh);
+
+          return object;
+        })();
+
+        const rightGamepadMesh = (() => {
+          const object = new THREE.Object3D();
+          object.position.set(0.1, 1.5, 0.7);
+
+          const coreMesh = (() => {
+            const geometry = new THREE.BoxBufferGeometry(0.05, 0.02, 0.1);
+            const material = consoleMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(coreMesh);
+
+          const buttonsMesh = (() => {
+            const geometry = concatBufferGeometry([
+              new THREE.BoxBufferGeometry(0.01, 0.005, 0.01)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(0.01 * 3 / 4, 0.02 / 2, -0.01 * 3 / 4)),
+              new THREE.BoxBufferGeometry(0.01, 0.005, 0.01)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(-0.01 * 3 / 4, 0.02 / 2, 0.01 * 3 / 4)),
+              new THREE.BoxBufferGeometry(0.04, 0.02 / 2, 0.02)
+                .applyMatrix(new THREE.Matrix4().makeTranslation((0.05 / 2) - (0.04 / 2) + 0.005, 0, -(0.1 / 2) + (0.02 / 4))),
+            ]);
+            const material = cartridgeMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(buttonsMesh);
+
+          return object;
+        })();
+
+        const consoleMesh = (() => {
+          const object = new THREE.Object3D();
+          object.position.set(0, 1.5, 0.5);
+
+          const coreMesh = (() => {
+            const geometry = concatBufferGeometry([
+              new THREE.BoxBufferGeometry(0.2, 0.05, 0.2),
+              new THREE.BoxBufferGeometry(0.05, 0.02, 0.05)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(-(0.2 / 2) + (0.05 / 4), -0.05 / 2, -(0.2 / 2) + (0.05 / 4))),
+              new THREE.BoxBufferGeometry(0.05, 0.02, 0.05)
+                .applyMatrix(new THREE.Matrix4().makeTranslation(-(0.2 / 2) + (0.05 / 4), -0.05 / 2, (0.2 / 2) - (0.05 / 4))),
+              new THREE.BoxBufferGeometry(0.05, 0.02, 0.05)
+                .applyMatrix(new THREE.Matrix4().makeTranslation((0.2 / 2) - (0.05 / 4), -0.05 / 2, -(0.2 / 2) + (0.05 / 4))),
+              new THREE.BoxBufferGeometry(0.05, 0.02, 0.05)
+                .applyMatrix(new THREE.Matrix4().makeTranslation((0.2 / 2) - (0.05 / 4), -0.05 / 2, (0.2 / 2) - (0.05 / 4))),
+            ]);
+            const material = consoleMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(coreMesh);
+
+          const cartridgeMesh = (() => {
+            const geometry = new THREE.BoxBufferGeometry(0.08, 0.05, 0.015)
+              .applyMatrix(new THREE.Matrix4().makeTranslation(0, 0.05 / 2, 0));
+            const material = cartridgeMaterial;
+
+            const mesh = new THREE.Mesh(geometry, material);
+            return mesh;
+          })();
+          object.add(cartridgeMesh);
+
+          return object;
+        })();
+        scene.add(consoleMesh);
+
+        return [
+          leftGamepadMesh,
+          rightGamepadMesh,
+        ];
+      })();
+      for (let i = 0; i < gamepadMeshes.length; i++) {
+        const gamepadMesh = gamepadMeshes[i];
+        scene.add(gamepadMesh);
+      }
 
       const iframe = document.createElement('iframe')
       iframe.hidden = true;
@@ -1408,7 +1647,7 @@
 
         console.log('got framebuffer', screenFramebuffer);
 
-        const properties = renderer.properties.get(texture);
+        const properties = renderer.properties.get(screenMesh.material.map);
         properties.__webglTexture = {
           id: screenFramebuffer.colorTexture,
         };
