--- a/index.html
+++ b/index.html
@@ -1632,8 +1632,7 @@
         ];
       })();
       for (let i = 0; i < gamepadMeshes.length; i++) {
-        const gamepadMesh = gamepadMeshes[i];
-        scene.add(gamepadMesh);
+        scene.add(gamepadMeshes[i]);
       }
 
       const iframe = document.createElement('iframe')
